# GeoLibs-Dator

./: .drone.yml  .gitignore  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  tox.ini
dator/: __init__.py  schemas.py  utils.py
dator/datastorages/: __init__.py  bigquery.py  carto.py  csv.py  postgresql.py
dator/transformers/: __init__.py  bigquery.py  pandas.py  postgresql.py
tests/: test_base.py
